# OpenGL-Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
assets/shaders/common/: brdf.glsl  skybox.vert  utils.glsl
assets/shaders/deferred/: deferred_phong_lighting.frag  gbuffer_phong.frag
assets/shaders/forward/: default.frag  default.vert  forward_pbr.frag  light.frag  light.vert  npr.frag  shadow_debug.frag  shadow_debug.vert  shadowpass.vert
assets/shaders/postprocess/: blur_pp.frag  chromaticab_pp.frag  edgedetect_pp.frag  grayscale_pp.frag  invert_pp.frag  post_process.frag  post_process.vert
src/: main.cpp
src/components/: CommonRessources.cpp  CommonRessources.h  Component.h  Entity3D.cpp  Entity3D.h  Heightmap.cpp  Heightmap.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h  TerrainBlendModes.cpp  TerrainBlendModes.h  TerrainComponent.cpp  TerrainComponent.h  TerrainStructs.cpp  TerrainStructs.h  Transform.cpp  Transform.h
src/core/: Camera.cpp  Camera.h  TimeManager.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h
src/rendering/: BlendManager.h  DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  GlobalShadingModel.cpp  GlobalShadingModel.h  IShadingModel.cpp  IShadingModel.h  PathTraceRenderer.cpp  PathTraceRenderer.h  RayTracingStructs.cpp  RayTracingStructs.h  RenderPass.h  Renderer.h
src/rendering/buffers/: ComputeBuffer.cpp  ComputeBuffer.h  ComputeImage.cpp  ComputeImage.h  EBO.cpp  EBO.h  FBO.cpp  FBO.h  FramebufferFactory.cpp  FramebufferFactory.h  IFramebuffer.cpp  IFramebuffer.h  MSAAFBO.cpp  MSAAFBO.h  SMFBO.cpp  SMFBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/rendering/lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.h  LightManager.cpp  LightManager.h  PointLight.cpp  PointLight.h  ShadowMap.cpp  ShadowMap.h  SpotLight.cpp  SpotLight.h
src/rendering/materials/: LocalShadingModel.cpp  LocalShadingModel.h  Material.h  MaterialManager.cpp  MaterialManager.h  RayTracingMaterial.cpp  RayTracingMaterial.h
src/rendering/postprocessing/: IPostProcessEffect.cpp  IPostProcessEffect.h  PostProcessEffect.cpp  PostProcessEffect.h  PostProcesser.cpp  PostProcesser.h  PostProcessingStack.cpp  PostProcessingStack.h
src/rendering/shaders/: ComputeShader.cpp  ComputeShader.h  ShaderLibrary.cpp  ShaderLibrary.h  shaderClass.cpp  shaderClass.h
src/rendering/textures/: Cubemap.cpp  Cubemap.h  Texture.cpp  Texture.h  Texture3D.cpp  Texture3D.h  TextureArray.cpp  TextureArray.h
src/scenes/: Scene.cpp  Scene.h  SceneBase.h  SceneManager.cpp  SceneManager.h
src/scenes/samplescenes/: BasicRenderingScene.cpp  BasicRenderingScene.h
